force-app/main/default/objects/API_Setup__mdt/fields/Endpoint_1__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_1__c</fullName>
    <label>Endpoint 1</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>