force-app/main/default/objects/API_Setup__mdt/fields/Endpoint_2__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_2__c</fullName>
    <inlineHelpText>If Endpoint URL is more than 255 characters, enter the remaining value in this field</inlineHelpText>
    <label>Endpoint 2</label>
    <type>TextArea</type>
</CustomField>