force-app/main/default/objects/API_Setup__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>120000</defaultValue>
    <inlineHelpText>Max 120000</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>